[package]
name = "geo-rasterize"
version = "0.1.2"
edition = "2021"
authors = ["Michael Salib <msalib@gmail.com>"]
rust-version = "1.56"  # only because we're using the 2021 edition
description = "a pure-rust 2D rasterizer for geospatial applications"
repository = "https://github.com/msalib/geo-rasterize/"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "gis", "geo", "raster", "geographic"]
categories = ["encoding", "graphics", "rendering", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
ndarray = "0.16"
geo = "0.29"
thiserror = "1.0"
num-traits = "0.2"
itertools = "0.14"

[dev-dependencies]
gdal = {version = "0.17", features = ["array","bindgen"]}
pretty_assertions = "1.4"
anyhow = "1.0"
proptest = "1.6.0"
criterion = "0.5"
flatgeobuf = "4.6"  # can't actually build this without the default http feature
geozero = {version = "0.14", default-features = false, features = ["with-geo"]}
rand = "0.9"

[[bench]]
name = "versus-gdal"
harness = false


[profile.bench]
debug = 1
